--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 
 <!--                 <!-- <div class="project-list"> -->
 
-
+                 <div class="project-list">
                     <img src="#" alt="img" class="project-image">
                     <div class="project-description">
                         <h2 class="project-name">Baraz-Boostrap__project</h2>
