--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 <!--                 <!-- <div class="project-list"> -->
 
                  <div class="project-list">
-                    <img src="./image/Baraz.JPG" alt="img" class="project-image">
+                    <img src="./image/Baraz.JPG" alt="img" class="project-image" height="150px" width = "150px">
                     <div class="project-description">
                         <h2 class="project-name">Baraz-Boostrap__project</h2>
                         <p class="project-descriptions">Full Responsive desing.</p>
