--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                     <div class="project-description">
                         <h2 class="project-name">Baraz-Boostrap__project</h2>
                         <p class="project-descriptions">Full Responsive desing.</p>
-                        <a href="https://majidul-27.github.io/Baraz__Boostrao--Project/" class="project-link">View Site<img src="./image/upperright.svg" alt="svg" width="15" class="upper-right-icon"></a>
+                        <a href="https://majidul-27.github.io/Baraz__Boostrao--Project/" class="project-link" target="_blank">View Site<img src="./image/upperright.svg" alt="svg" width="15" class="upper-right-icon"></a>
                     </div>
 
 
