--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             </div>
 
             <div class="project-continer">
-                <div class="project-list">
+<!--                 <div class="project-list">
 
 
                     <img src="./image/portfolio-car.JPG" alt="img" class="project-image" width="250px">
@@ -543,7 +543,7 @@
                     </div>
 
 
-                </div>
+                </div> -->
 
 
                 
